<resources>
    <string name="app_name">App de Cadastro</string>
    <string name="sair">Sair</string>
    <string name="clientes">Clientes</string>
    <string name="produtos">Produtos</string>
    <string name="fornecedores">Fornecedores</string>
    <string name="listagem">Listagem</string>
    <string name="voltar">Voltar</string>
    <string name="cadastrar">Cadastrar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="marca">Marca</string>
    <string name="quantidade">Quantidade</string>
    <string name="data_de_validade">Data de Validade</string>
    <string name="pre_o_r">Preço (R$)</string>
    <string name="nome_fantasia">Nome Fantasia</string>
    <string name="cnpj">CNPJ</string>
    <string name="telefone">Telefone</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
</resources>